force-app/main/default/objects/Apttus_Approval__AdhocApprovalProcess__c/Apttus_Approval__AdhocApprovalProcess__c.object-meta.xml
<CustomObject>
    <description>Defines adhoc approval process information for a specific business object</description>
    <label>Adhoc Approval Process</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adhoc Approval Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>