force-app/main/default/objects/Apttus_Approval__AdhocApprovalProcess__c/fields/Apttus_Approval__AttachmentIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AttachmentIds__c</fullName>
    <label>Attachment Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>