force-app/main/default/objects/Apttus_Approval__AdhocApprovalProcess__c/fields/Apttus_Approval__BusinessObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BusinessObjectId__c</fullName>
    <label>Business Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>