force-app/main/default/objects/Apttus_Approval__AdhocApprovalProcess__c/fields/Apttus_Approval__BusinessObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BusinessObjectType__c</fullName>
    <label>Business Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>