force-app/main/default/objects/Apttus_Approval__AdhocApprovalProcess__c/fields/Apttus_Approval__DisplayFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DisplayFields__c</fullName>
    <label>Display Fields</label>
    <type>TextArea</type>
</CustomField>