force-app/main/default/objects/Apttus_Approval__AdhocApprovalProcess__c/fields/Apttus_Approval__ProcessComments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ProcessComments__c</fullName>
    <label>Process Comments</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>