force-app/main/default/objects/Apttus_Approval__AdhocApprovalProcess__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__BusinessObjectType__c</columns>
    <columns>Apttus_Approval__BusinessObjectId__c</columns>
    <columns>Apttus_Approval__DisplayFields__c</columns>
    <columns>Apttus_Approval__DisplayHeaderFields__c</columns>
    <columns>Apttus_Approval__AttachmentIds__c</columns>
    <columns>Apttus_Approval__ProcessComments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>